# GeoportalTH_Imagery_Download

./: GeoportalTH_Imagery_Download.ipynb  MANIFEST.in  Qgis 419 project.qgz  Query.txt  README.md  geo419.yml  setup.cfg
.ipynb_checkpoints/: GeoportalTH_Imagery_Download-checkpoint.ipynb
Stand_2010-2013/: DGM2_2010-2013_Erfass-lt-Meta_UTM32-UTM_2014-12-10.dbf  DGM2_2010-2013_Erfass-lt-Meta_UTM32-UTM_2014-12-10.kel  DGM2_2010-2013_Erfass-lt-Meta_UTM32-UTM_2014-12-10.shx
Stand_2014-2019/: DGM1_2014-2019_Erfass-lt-Meta_UTM_2020-04-20--17127.dbf  DGM1_2014-2019_Erfass-lt-Meta_UTM_2020-04-20--17127.kel  DGM1_2014-2019_Erfass-lt-Meta_UTM_2020-04-20--17127.shp  DGM1_2014-2019_Erfass-lt-Meta_UTM_2020-04-20--17127.shx
Stand_2020-2025/DGM1_2020-2025_Erfass-lt-Meta_UTM_2021-03--17127/: DGM1_2020-2025_Erfass-lt-Meta_UTM_2021-03--17127.shp
src/GeoportalTH_Imagery_Downlaod_F_M.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/GeoportalTH_Imagery_Download/: GeoportalTH_main.py
