[metadata]
name = GeoportalTH_Imagery_Downlaod_F-M
version = 1.0.0
author = Marcel Felix & Friederike Metz
author_email = marzelmusik@gmail.com
description = A package for downloading Orthophotos and Digital Elevation Models from the Thuringian Geoportal 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/friedmag-m/GeoportalTH_Imagery_Download
project_urls = 
    Bug Tracker = https://github.com/friedmag-m/GeoportalTH_Imagery_Download/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src